--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,6 @@
 .page {
+  display: flex;
+  flex-direction: column;
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
   /* поэтому выше установлена минимальная ширина страницы */
@@ -7,6 +9,7 @@
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
+  background-color: #f2f2f2;
 }
 
 div {
@@ -17,7 +20,7 @@ div {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  background-color: #f2f2f2;
+  margin-bottom: 100px;
   
   /* выше установили ограничения для секции */
 }
@@ -27,12 +30,11 @@ div {
 }
 
 .logo {
-  background-image: url(../images/logo_place_header.svg);
   width: 228px;
   height: 32px;
 }
 
-.logo_place_header {
+.header__logo {
   position: absolute;
   top: 34px;
   left: 64px;
@@ -63,9 +65,14 @@ div {
   bottom: 0;
   width: 765px;
   height: 608px;
-  background-image: url(../images/two_again.png);
-  background-size: cover;
+  overflow: hidden;
   z-index: 2;
+}
+
+.main-illustration_place_header {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
