--- a/styles/style.css
+++ b/styles/style.css
@@ -69,7 +69,7 @@ div {
   z-index: 2;
 }
 
-.main-illustration_place_header {
+.main-illustration {
   width: 100%;
   height: 100%;
   object-fit: fill;
