--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,10 @@
 div {
   border: 1px solid rgb(255, 0, 0);
 }
+
+section {
+  border: 1px solid rgb(25, 0, 255);
+}
 .header {
   display: flex;
   height: 100vh;
@@ -65,7 +69,7 @@ div {
   font-size: 102px;
   line-height: 96px;
   font-weight: 600;
-  z-index: -1;
+  z-index: 3;
 }
 
 .header__subtitle {
@@ -219,6 +223,73 @@ div {
   font-size: 18px;
   font-weight: normal;
 }
+
+.feynman {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  height: 890px;
+}
+
+.feynman__title {
+  align-self: center;
+  width: 648px;
+  z-index: 1;
+  margin-bottom: 70px;
+}
+
+.h1_place_feynman {
+  margin: 0;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 600;
+}
+
+.feynman__subtitle {
+  align-self: center;
+  z-index: 1;
+}
+
+.h2_place_feynman {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  margin: 0;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+
+.feynman__link {
+  position: absolute;
+  right: 48px;
+  top: 50%;
+}
+
+.link_place_feynman {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+
+.feynman__image{
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 867px;
+  height: 647px;
+  z-index: 0;
+  overflow: hidden;
+}
+
+.feynman__image-position {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+
+}
+
 
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
