--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,10 @@
   background-color: #f2f2f2;
 }
 
+a {
+  border: 1px yellow solid ;
+}
+
 div {
   border: 1px solid rgb(255, 0, 0);
 }
@@ -21,10 +25,11 @@ section {
 }
 .header {
   display: flex;
+  position: relative;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  margin-bottom: 200px;
+  margin-bottom: 100px;
   
   /* выше установили ограничения для секции */
 }
@@ -33,18 +38,26 @@ section {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
+  margin: 0;
 }
 
 .h2 {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
+  margin: 0;
 }
 
 .h3 {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
+  margin: 0;
+}
+
+.p {
+  margin: 0;
+  padding: 0;
 }
 
 .link {
@@ -109,11 +122,6 @@ section {
   z-index: 1;
 }
 
-
-
-.content {
-}
-
 .description {
   display: flex;
   justify-content: center;
@@ -175,27 +183,27 @@ section {
   width: 60%;
 }
 
-.table {
+.table-digits {
   display: flex;
   flex-wrap: wrap;
   width: 1100px;
   justify-content: space-between;
 }
 
-.table__cell {
+.table-digits__cell {
   margin-top: 60px;
   width: 250px;
 }
 
-.table__heading {
+.table-digits__heading {
   margin-bottom: 20px;
 }
 
-.table__text {
+.table-digits__text {
   margin-bottom: 20px;
 }
 
-.table__text:last-child {
+.table-digits__text:last-child {
   margin-bottom: 0px;
 }
 
@@ -290,12 +298,158 @@ section {
 
 }
 
+.kaufman {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #1f1f1f;
+  padding-bottom: 90px;
+  overflow: hidden;
+}
+
+.section-title {
+  width: 60%;
+  margin-bottom: 20px;
+  margin-top: 90px;
+  z-index: 1;
+}
+
+.section-title_theme_dark{
+  color: white;
+}
+
+
+.h1_place_kaufman {
+  text-align: center;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+}
+
+.section-subtitle {
+  width: 60%;
+  z-index: 1;
+} 
+
+.section-subtitle_theme_dark{
+  color: white;
+}
+
+.h2_place_kaufman {
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.table-kaufman {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 0 260px;
+  z-index: 1;
+}
 
 /* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
+.table-kaufman__cell_theme_dark {
   width: 200px;
   color: white;
-  margin-right: 0;
+  margin-right: 0px;
   margin-top: 80px;
+}
+
+.h3_place_kaufman {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.table-kaufman__text{
+  margin-top: 20px;
+}
+
+.p_place_kaufman {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.kaufman__triangle {
+  position: absolute;
+  top: 0px;
+  right: -210px;
+  width: 877px;
+  height: 640px;
+}
+
+.kaufman__triangle-image {
+  width: 100.5%;
+}
+
+.footer {
+  background-color: #1f1f1f;
+  min-height: 350px;
+  display: flex;
+}
+
+.footer__columns {
+  display: flex;
+  justify-content: space-between;
+  margin: 60px auto 40px;
+  width: 90%;
+}
+
+.footer__column_content_copyright {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 711px;
+  justify-content: space-between;
+}
+
+.logo_place_header {
+  width: 228px;
+  height: 32px;
+}
+
+.footer__author {
+  color: #f2f2f2;
+  margin: 18px 0;
+  width: max-content;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.footer__column-links {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  margin-bottom: 16px;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.p_place_footer {
+  padding: 0;
+}
+
+.h3_place_footer {
+  color: #f2f2f2;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.footer__column-link {
+  color: #f2f2f2;
+  text-decoration: none;
+}
+
+.footer__social-icon {
+  padding-right: 10px;
+  width: 16px;
+  height: 16px;
 }
 
