--- a/blocks/page/header/header.css
+++ b/blocks/page/header/header.css
@@ -5,7 +5,7 @@
     min-height: 600px;
     max-height: 756px;
     margin-bottom: 100px;
-    
+    overflow: hidden;
     /* выше установили ограничения для секции */
   }
   
