--- a/pages/index.css
+++ b/pages/index.css
@@ -6,8 +6,17 @@
 @import url(../blocks/page/header/__title/header__title.css);
 @import url(../blocks/page/header/__subtitle/header__subtitle.css);
 @import url(../blocks/page/header/__square-pic/header__square-pic.css);
+@import url(../blocks/page/header/__square-pic/_rotation/header__square-pic_rotation.css);
 @import url(../blocks/page/header/__main-illustration/header__main-illustration.css);
 @import url(../blocks/page/header/__main-illustration/_main-illustration/header__main-illustration_main-illustration.css);
+@import url(../blocks/page/content/techniques/techniques.css);
+@import url(../blocks/page/content/techniques/h1/h1_place_techniques.css);
+@import url(../blocks/page/content/techniques/h2/h2_place_techniques.css);
+@import url(../blocks/page/content/techniques/cards/cards.css);
+@import url(../blocks/page/content/techniques/cards/__item/cards__item.css);
+@import url(../blocks/page/content/techniques/cards/__image/cards__image.css);
+@import url(../blocks/page/content/techniques/cards/__title/cards__title.css);
+@import url(../blocks/page/content/techniques/cards/__description/cards__description.css);
 @import url(../blocks/page/content/description/description.css);
 @import url(../blocks/page/content/description/two-columns/two-columns.css);
 @import url(../blocks/page/content/description/two-columns/__breif/two-columns__breif.css);
@@ -57,3 +66,12 @@
 @import url(../blocks/footer/__social-icon/footer__social-icon.css);
 @import url(../blocks/footer/h3/h3_place_footer.css);
 @import url(../blocks/footer/p/p_place_footer.css);
+
+div {
+    border: red 1px solid;
+}
+
+section {
+    border: yellow 1px solid;
+
+}
