Сделанный проект по 2 блоку практикума

--- a/blocks/page/header/__square-pic/_rotation/header__square-pic_rotation.css
+++ b/blocks/page/header/__square-pic/_rotation/header__square-pic_rotation.css
@@ -7,3 +7,7 @@
 .header__square-pic {
     animation: rotate 20s linear infinite;
 }
+
+.kaufman__triangle {
+    animation: rotate 20s linear infinite;
+}
