--- a/blocks/page/content/kaufman/section-title/section-title.css
+++ b/blocks/page/content/kaufman/section-title/section-title.css
@@ -3,4 +3,7 @@
     margin-bottom: 20px;
     margin-top: 90px;
     z-index: 1;
+    line-height: 1.15;
+    font-size: 60px;
+    font-weight: 600;
 }
