--- a/pages/index.css
+++ b/pages/index.css
@@ -17,6 +17,11 @@
 @import url(../blocks/page/content/techniques/cards/__image/cards__image.css);
 @import url(../blocks/page/content/techniques/cards/__title/cards__title.css);
 @import url(../blocks/page/content/techniques/cards/__description/cards__description.css);
+@import url(../blocks/page/content/video/video.css);
+@import url(../blocks/page/content/video/__iframe/video__iframe.css);
+@import url(../blocks/page/content/video/h1/h1_place_video.css);
+@import url(../blocks/page/content/video/h2/h2_place_video.css);
+@import url(../blocks/page/content/oakley/oakley.css);
 @import url(../blocks/page/content/description/description.css);
 @import url(../blocks/page/content/description/two-columns/two-columns.css);
 @import url(../blocks/page/content/description/two-columns/__breif/two-columns__breif.css);
@@ -42,6 +47,16 @@
 @import url(../blocks/page/content/feynman/__image/_position/feynman__image-position.css);
 @import url(../blocks/page/content/feynman/h1/h1_place_feynman.css);
 @import url(../blocks/page/content/feynman/h2/h2_place_feynman.css);
+@import url(../blocks/page/content/khan/khan.css);
+@import url(../blocks/page/content/khan/__container/khan__container.css);
+@import url(../blocks/page/content/khan/__author/khan__author.css);
+@import url(../blocks/page/content/khan/__title/khan__title.css);
+@import url(../blocks/page/content/khan/__quote/khan__quote.css);
+@import url(../blocks/page/content/khan/__quote-author/khan__quote-author.css);
+@import url(../blocks/page/content/khan/__quote-author-subline/khan__quote-author-subline.css);
+@import url(../blocks/page/content/khan/__book-container/khan__book-container.css);
+@import url(../blocks/page/content/khan/__book-pic/khan__book-pic.css);
+@import url(../blocks/page/content/khan/__buy-link/khan__buy-link.css);
 @import url(../blocks/page/content/kaufman/kaufman.css);
 @import url(../blocks/page/content/kaufman/section-title/section-title.css);
 @import url(../blocks/page/content/kaufman/section-title/_theme/section-title_theme_dark.css);
@@ -56,6 +71,9 @@
 @import url(../blocks/page/content/kaufman/h2/h2_place_kaufman.css);
 @import url(../blocks/page/content/kaufman/h3/h3_place_kaufman.css);
 @import url(../blocks/page/content/kaufman/p/p_place_kaufman.css);
+@import url(../blocks/page/content/resources/resources.css);
+@import url(../blocks/page/content/resources/__logo-zone/resources__logo-zone.css);
+@import url(../blocks/page/content/resources/__link/resources__link.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/logo/logo.css);
 @import url(../blocks/footer/__author/footer__author.css);
@@ -66,12 +84,3 @@
 @import url(../blocks/footer/__social-icon/footer__social-icon.css);
 @import url(../blocks/footer/h3/h3_place_footer.css);
 @import url(../blocks/footer/p/p_place_footer.css);
-
-div {
-    border: red 1px solid;
-}
-
-section {
-    border: yellow 1px solid;
-
-}
